@@ -3,7 +3,7 @@
  * STATUSWML.C -  Nagios Status CGI for WAP-enabled devices
  *
  * Copyright (c) 2001-2007 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 01-18-2007
+ * Last Modified: 07-16-2007
  *
  * License:
  * 
@@ -234,11 +234,9 @@ int process_cgivars(void){
 				break;
 			        }
 
-			hostgroup_name=(char *)malloc(strlen(variables[x])+1);
-			if(hostgroup_name==NULL)
+			if((hostgroup_name=(char *)strdup(variables[x]))==NULL)
 				hostgroup_name="";
-			else
-				strcpy(hostgroup_name,variables[x]);
+			strip_html_brackets(hostgroup_name);
 
 			if(!strcmp(hostgroup_name,"all"))
 				show_all_hostgroups=TRUE;
@@ -255,11 +253,9 @@ int process_cgivars(void){
 				break;
 			        }
 
-			host_name=(char *)malloc(strlen(variables[x])+1);
-			if(host_name==NULL)
+			if((host_name=(char *)strdup(variables[x]))==NULL)
 				host_name="";
-			else
-				strcpy(host_name,variables[x]);
+			strip_html_brackets(host_name);
 		        }
 
 		/* we found the service argument */
@@ -271,11 +267,9 @@ int process_cgivars(void){
 				break;
 			        }
 
-			service_desc=(char *)malloc(strlen(variables[x])+1);
-			if(service_desc==NULL)
+			if((service_desc=(char *)strdup(variables[x]))==NULL)
 				service_desc="";
-			else
-				strcpy(service_desc,variables[x]);
+			strip_html_brackets(service_desc);
 		        }
 
 
@@ -312,11 +306,9 @@ int process_cgivars(void){
 				break;
 			        }
 
-			ping_address=(char *)malloc(strlen(variables[x])+1);
-			if(ping_address==NULL)
+			if((ping_address=(char *)strdup(variables[x]))==NULL)
 				ping_address="";
-			else
-				strcpy(ping_address,variables[x]);
+			strip_html_brackets(ping_address);
 		        }
 
 		/* we found the traceroute argument */
@@ -328,11 +320,9 @@ int process_cgivars(void){
 				break;
 			        }
 
-			traceroute_address=(char *)malloc(strlen(variables[x])+1);
-			if(traceroute_address==NULL)
+			if((traceroute_address=(char *)strdup(variables[x]))==NULL)
 				traceroute_address="";
-			else
-				strcpy(traceroute_address,variables[x]);
+			strip_html_brackets(traceroute_address);
 		        }
 
 	        }
