@@ -2,7 +2,7 @@
  *
  * CGIUTILS.H - Header file for common CGI functions
  * Copyright (c) 1999-2007  Ethan Galstad (nagios@nagios.org)
- * Last Modified: 05-30-2007
+ * Last Modified: 07-16-2007
  *
  * License:
  * 
@@ -459,6 +459,7 @@ int compare_hashdata2(const char *,const char *,const char *,const char *);
 void strip(char *);                                		/* strips newlines, carriage returns, and spaces from end of buffer */
 char *unescape_newlines(char *);
 void sanitize_plugin_output(char *);                            /* strips HTML and bad characters from plugin output */
+void strip_html_brackets(char *);				/* strips > and < from string */
 
 void get_time_string(time_t *,char *,int,int);			/* gets a date/time string */
 void get_interval_time_string(double,char *,int);		/* gets a time string for an interval of time */
