@@ -3,7 +3,7 @@
  * XSDDEFAULT.C - Default external status data input routines for Nagios
  *
  * Copyright (c) 2000-2007 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   05-17-2007
+ * Last Modified:   07-16-2007
  *
  * License:
  *
@@ -676,12 +676,12 @@ int xsddefault_save_status_data(void){
 
 /* read all program, host, and service status information */
 int xsddefault_read_status_data(char *config_file,int options){
-#ifdef BAD_MMAP
+#ifdef NO_MMAP
+	char input[MAX_PLUGIN_OUTPUT_LENGTH]="";
+	FILE *fp=NULL;
+#else
 	char *input=NULL;
 	mmapfile *thefile=NULL;
-#else
-	char input[2048]="";
-	FILE *fp=NULL;
 #endif
 	int data_type=XSDDEFAULT_NO_DATA;
 	hoststatus *temp_hoststatus=NULL;
@@ -724,27 +724,27 @@ int xsddefault_read_status_data(char *config_file,int options){
 		return ERROR;
 
 	/* open the status file for reading */
-#ifdef BAD_MMAP
-	if((thefile=mmap_fopen(xsddefault_status_log))==NULL)
+#ifdef NO_MMAP
+	if((fp=fopen(xsddefault_status_log,"r"))==NULL)
 		return ERROR;
 #else
-	if((fp=fopen(xsddefault_status_log,"r"))==NULL)
+	if((thefile=mmap_fopen(xsddefault_status_log))==NULL)
 		return ERROR;
 #endif
 
 	/* read all lines in the status file */
 	while(1){
 
-#ifdef BAD_MMAP
+#ifdef NO_MMAP
+		strcpy(input,"");
+		if(fgets(input,sizeof(input),fp)==NULL)
+			break;
+#else
 		/* free memory */
 		my_free((void **)&input);
 
 		/* read the next line */
 		if((input=mmap_fgets(thefile))==NULL)
-			break;
-#else
-		strcpy(input,"");
-		if(fgets(input,sizeof(input),fp)==NULL)
 			break;
 #endif
 
@@ -1232,11 +1232,11 @@ int xsddefault_read_status_data(char *config_file,int options){
 	        }
 
 	/* free memory and close the file */
-#ifdef BAD_MMAP
+#ifdef NO_MMAP
+	fclose(fp);
+#else
 	my_free((void **)&input);
 	mmap_fclose(thefile);
-#else
-	fclose(fp);
 #endif
 
 	/* free memory */
